- дописала тесты - исправила выявленные ошибки в сервисах